--- a/221028-104321-esp32dev/platformio.ini
+++ b/221028-104321-esp32dev/platformio.ini
@@ -13,3 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+lib_deps = 
+	crankyoldgit/IRremoteESP8266@^2.8.4
+	sandeepmistry/LoRa@^0.8.0
+	z3t0/IRremote@^4.0.0
+	makuna/NeoPixelBus@^2.7.0
